--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,17 @@
     "license": "MIT",
     "require": {
         "react/socket": "^1.1",
-        "symfony/event-dispatcher": "^4.1",
-        "symfony/console": "^4.1"
+        "symfony/event-dispatcher": "^3.4 || ^4.0",
+        "symfony/console": "^3.4 || ^4.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "Nusje2000\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\App\\": "tests/"
+            "Tests\\Nusje2000\\": "tests/"
         }
     },
     "require-dev": {
