--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "require": {
         "react/socket": "^1.1",
         "symfony/event-dispatcher": "^3.4 || ^4.0",
-        "symfony/console": "^3.4 || ^4.0"
+        "psr/log": "^1.1",
+        "aeviiq/collection": "^2.0",
+        "myclabs/php-enum": "^1.7"
     },
     "autoload": {
         "psr-4": {
